--- a/statistics.html
+++ b/statistics.html
@@ -103,7 +103,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.mathjobs.org/jobs/jobs/14174'>Mount Holyoke College, Department of Mathematics and Statistics </a></h5> 
+<h5><a href='https://www.mathjobs.org/jobs/jobs/14174'>Mount Holyoke College, Department of Mathematics and Statistics </a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -131,11 +131,11 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Montreal Montreal</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='http://uis.applytojob.com/apply/EWLSFp6glf/Security-Monitoring-Solution-Assessment-And-Implementation'>Security monitoring solution - assessment and implementation - UNESCO Institute for Statistics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://uis.applytojob.com/apply/EWLSFp6glf/Security-Monitoring-Solution-Assessment-And-Implementation'>Security monitoring solution - assessment and implementation - UNESCO Institute for Statistics - Career Page</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://studygroupuk.applytojob.com/apply/s76rdno9aa/Business-Management-Economics-Or-Statistics-Tutor'>Business & Management, Economics or Statistics Tutor - Study Group - Career Page</a></h5> 
+<h5><a href='http://studygroupuk.applytojob.com/apply/s76rdno9aa/Business-Management-Economics-Or-Statistics-Tutor'>Business & Management, Economics or Statistics Tutor - Study Group - Career Page</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -153,7 +153,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oQzfbfwz&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=n3KKhMw5'>Premier Research Careers - Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oQzfbfwz&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=n3KKhMw5'>Premier Research Careers - Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -243,7 +243,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">Mechelen, Belgium  France</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='http://decipherbio.applytojob.com/apply/mYGJyt6fl5/Biostatistician'>Biostatistician - Decipher Biosciences - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://decipherbio.applytojob.com/apply/mYGJyt6fl5/Biostatistician'>Biostatistician - Decipher Biosciences - Career Page</a></h5> 
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -267,7 +267,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-biostatistician-31421'>Sr Biostatistician - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-biostatistician-31421'>Sr Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States  North America United States  North America United States  North America United States</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -279,7 +279,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='https://recruit.ap.ucsb.edu/JPF01589'>Tenure Track Teaching Faculty Position ? Statistics and Data Science ? Department of Statistics and Applied Probability (JPF01589) - Recruit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.ap.ucsb.edu/JPF01589'>Tenure Track Teaching Faculty Position ? Statistics and Data Science ? Department of Statistics and Applied Probability (JPF01589) - Recruit</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
@@ -312,7 +312,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p>Sep 27, 2019 ... ... at the Medical School, Quantitative Collaborative (Social Sciences), the newly 
 created School of Data Science, and other departments and schools. Faculty?...</p>
 <hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/011C117D5D'>Statistics & Data Corporation (SDC) - Jobs: Clinical Data Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/011C117D5D'>Statistics & Data Corporation (SDC) - Jobs: Clinical Data Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -331,7 +331,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Mechelen, Belgium</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistician-4603'>Biostatistician - PPD Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistician-4603'>Biostatistician - PPD Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -441,7 +441,7 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
-<h5><a href='https://tfscareers.workable.com/j/13CE70BC84'>TFS - Jobs: Senior Biostatistician - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tfscareers.workable.com/j/13CE70BC84'>TFS - Jobs: Senior Biostatistician - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
